# oss-vuln-detection

./: README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: base_agent.py  dast_agent.py  infra_agent.py  sast_agent.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  llm.py  models.py  patterns.py
backend/app/examples/: vulnerable_sql.py
backend/app/services/: language_detector.py  scanner.py
