[project]
name = "oss-vuln-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pydantic-ai>=1.0.15",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
        "ruff>=0.5.7",
    "httpx>=0.27.0",
    "packaging>=24.1",
]
